styles/Home.module.css
/* ... */
.nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1rem 121px;
}

.nav ul {
    display: flex;
    color: white;
    list-style: none;
    gap: 3rem;
    font-size: 13px;

}

.nav li {
    cursor: pointer;
}

.navEnd {
    display: flex;
    gap: 1.5rem;
    align-items: center;
}

.navEnd img {
    cursor: pointer;
}

.nav button {
    color: white;
    background-color: transparent;;
    border: solid 1px rgb(134, 134, 134);
    padding: 0.6rem 1.5rem;
    border-radius: 5px;
    font-weight: bold;
    font-size: 13px;
    cursor: pointer;
}

.hero {
    color: white;
    padding:4rem 145px;
}
.header {
    font-size: 50px;
    font-weight: 600;
    width: 500px;
    margin-bottom: 1rem;
}

.header span {
    background-image: linear-gradient(90deg, #39BEF0, #90DEFC, #90DEFC);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

}

.headerPara {
    color: white;
    width: 400px;
    font-size: 15px;
    line-height: 1.5;
    z-index: 1;
}

.headerPara span {
    opacity: 0.7;
    z-index: 1;
}

.heroBtns {
    display: flex;
    gap: 1rem;
    margin-top: 2rem;
    margin-bottom: 12rem;
}

.heroBtns button {
    z-index: 1;
    cursor: pointer;
    color: white;
    padding: 0.8rem 2rem;
    border-radius: 7px;
    font-weight: bold;
    font-size: 13px;
}


.hero button:first-of-type {
    background-color: #39BEF0;
    border: none;
}

.hero button:nth-of-type(2) {
    background-color: transparent;
    border: solid 1px white;
}

.appUpMobile {
    display: none;
}

.appUp {
    position: absolute;
    bottom: 130px;
    right: 120px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.appUp img {
    cursor: pointer;
}

.ellipse {
    position: absolute;
    bottom: -55px;
    right: 0;
    width: 100vw;
    height: 190px;
    background-image: url("/Ellipse1.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

/* nft section */

.nftSection {
    padding: 4rem 50px;
    background-image: url("/nft-bg.webp");
    color: white;
    background-size: cover;
    position: relative;
}

.nftSection h2 {
    font-size: 35px;
    font-weight: 600;
    margin-bottom: 1rem;
}

.nftSection h2 div {
    width: fit-content;
    background-image: linear-gradient(90deg, #39BEF0, #90DEFC, #90DEFC);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.nftCards {
    display: flex;
    gap: 1.5rem;
    margin-top: 2rem;
    /* height: 280px; */
    flex-wrap: wrap;
}

.nftCards button {
    cursor: pointer;
}

.nftCard1 {
    height: 280px;
}

.nftCard3 {
    height: 280px;
}

.nftCard5 {
    height: 280px;
}

.nftCard2 {
    padding-top: 2rem;
    height: 280px;
}

.nftCard4 {
    padding-top: 2rem;
    height: 280px;
}

.nftSection h3 {
    font-size: 12px;
    font-weight: 600;
    display: flex;
    width: 120px;
    justify-content: space-between;
    align-items: center;
}

.nftSection p {
    color:#39BEF0;
    font-size: 12px;
}

.nftSection button {
    align-self: center;
    margin-bottom: 10rem;
    margin-left: 0.5rem;
    color: white;
    opacity: 0.3;
    background-color: transparent;
    border: solid 1px white;
    width: 70px;
    height: 42px;
    border-radius: 7px;
}

.ellipse2 {
    position: absolute;
    bottom: -120px;
    right: 0;
    width: 100%;
    height: 190px;
    background-image: url("/Ellipse2.png");
    background-repeat: no-repeat;
    background-size: 100vw;
    background-position: center;
    z-index: 100;
}


/* roadmap section */

.roadmap {
    padding: 4rem 215px;
    color: white;
    position: relative;
    background-image: url("/roadmap-bg.webp");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    text-align: center;
}

.roadmap h2 {
    font-size: 45px;
    font-weight: 600;
    margin-bottom: 1rem;
}

.roadmap p {
    font-size: 13px;
    color: #39BEF0;
    font-family: 'JetBrains Mono', monospace;
    margin-bottom: -1rem;
}

.emptyHeight {
    height: 400px;
}

.bigRoadmap {
    display: flex;
    align-items: center;
    justify-content: center;
    justify-content: center;
    background-image: url("/roadmap-big.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    height: 90%;
}

.smallRoadmap {
    display: none;
}

.roadmapBtns {
    display: flex;
    justify-content: center;
    gap: 0.5rem;
}

.roadmapBtns button {
    z-index: 1;
    cursor: pointer;
}

.roadmapBtns button:first-of-type {
    color: white;
    background-color: #39BEF0;
    padding: 0.7rem 1.5rem;
    border-radius: 7px;
    font-weight: bold;
    font-size: 13px;
    border: none;
}

.roadmapBtns button:nth-of-type(2) {
    color: white;
    background-color: rgba(100, 100, 100, 0.3);
    padding: 0.7rem 1.5rem;
    border-radius: 7px;
    font-weight: bold;
    font-size: 13px;
    border: none;
}

/* team section */

.team {
    padding: 4rem 209px;
    color: white;
    position: relative;
    background-image: url("/team-bg.webp");
    background-size: cover;
    background-repeat: no-repeat;
}

.ellipse3 {
    position: absolute;
    top: -140px;
    right: 0;
    width: 100vw;
    height: 190px;
    background-image: url("/Ellipse3.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.team h2 {
    font-size: 35px;
    font-weight: 600;
    margin-bottom: 2rem;
}

.team h2 span {
    background-image: linear-gradient(90deg, #39BEF0, #90DEFC, #90DEFC);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.teamCards {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 0.8rem;
}
/* ... */

